RESOLVED FIXED89770
[Gtk] REGRESSION(r120918): Causes flaky DND tests
https://bugs.webkit.org/show_bug.cgi?id=89770
Summary [Gtk] REGRESSION(r120918): Causes flaky DND tests
Zan Dobersek
Reported 2012-06-22 11:02:28 PDT
r120918[1] caused some drag-and-drop tests in fast/events to start failing, however they pass when rerun and are therefor categorized as flaky. I'll not add expectations for these just yet as I'm hoping the issue will be resolved quickly. [1] - http://trac.webkit.org/changeset/120918/
Attachments
Patch (3.63 KB, patch)
2012-06-23 00:23 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2012-06-23 00:23:00 PDT
Zan Dobersek
Comment 2 2012-06-23 00:33:32 PDT
(In reply to comment #1) > Created an attachment (id=149169) [details] > Patch It turns out fast/events/domactivate-sets-underlying-click-event-as-handled.html was timing out because of the modal dialog being run in the previous implementation of ChromeClient::runOpenPanel. Current implementation of that method displays the dialog in a non-modal way though, but that's causing problems in drag-and-drop tests as the dialog stays around. The solution is to not show any file chooser dialog by returning TRUE in web view's run-file-chooser signal handler.
Zan Dobersek
Comment 3 2012-06-23 22:32:13 PDT
Comment on attachment 149169 [details] Patch Clearing flags on attachment: 149169 Committed r121109: <http://trac.webkit.org/changeset/121109>
Zan Dobersek
Comment 4 2012-06-23 22:32:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.