[Gtk] REGRESSION(r120918): Causes flaky DND tests https://bugs.webkit.org/show_bug.cgi?id=89770

Reviewed by Martin Robinson.

Tools:

Connect to the run-file-chooser signal of the WebKitWebView and
return TRUE so no file chooser dialog is run. This prevents certain
test failures.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(webViewRunFileChooser):
(createWebView):

LayoutTests:

Remove test expectations for fast/events/domactivate-sets-underlying-click-event-as-handled.html
as the test now passes since the file chooser dialog is no longer run.

* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/107687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121109 268f45cc-cd09-0410-ab3c-d52691b4dbfc